Add keywords and description

--- a/vessel.html
+++ b/vessel.html
@@ -3,8 +3,9 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="with=device-width, initial-scale=1.0">
-		<meta name="description" content="...">
-		<meta name="keywords" content="...">
+		<meta name="description" content="Vessel to dieta do domu i zdrowy catering dopasowany do Twoich potrzeb. Dostarczamy
+		wysokiej jakości gotowe posiłki dietetyczne pod same drzwi.">
+		<meta name="keywords" content="catering dietetyczny, diety pudełkowe, dieta catering, zdrowa dieta, odchudzanie, fit dieta, fit catering">
 		<title>Vessel</title>
 		<link rel="stylesheet" href="vessel.css">
 	</head>
